== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b35.zip V1.6bb35]  ==

''' CBUS '''

Fixed issue with incorrect data type when processing MMI messages from a Label device.


''' M1 '''

Updates to TALK

== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b34.zip V1.6bb34]  ==

''' Scripting '''

Added a sendCommand method for no command only with no extra,extra2....  parameters


''' M1 '''

Updates for consistency 

== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b33.zip V1.6bb33]  ==

''' Scripting '''

Updating scripting to only use the elife.sendCommand function. Removed first parameter of sendCommand call.

== 1/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b32.zip V1.6bb32]  [attachment:wiki:SoftwareReleases:eLife-1.6b32-libs.zip Libs-V1.6b32] ==

''' Scripting '''

Implemented initial groovy script system. See [http://groovy.codehause.org] for Groovy language documentation, and [ServerDocs/GroovyScripting] for details 
of the scripting implementation. Issue [ticket:464]

Refactored Jython scripting to allow integrated support of Groovy and Jython scripts (eg. on list of scripts sent to the client).

''' Admin '''

Fixed issue on reloading scripts.

''' General '''

Split finishedLoadingConfig into two methods, one which is called before every comms connect (prepareToAttatchComms) , and one which is called once (finishedReadingConfig). 
Removes excessive adding of internal devices. Resolves [ticket:594],[ticket:597]

''' M1 '''

Merged in latest changes.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b31.zip V1.6b31]   ==

''' General '''

Moved second message insance to INFO of stack trace.


== Released [attachment:wiki:SoftwareReleases:eLife-1.6b30.zip V1.6b30]   ==

''' General '''

Show full stack trace for a command added to the cache with no display name, move to INFO so it does not display on the client.

Allow multiple scripts to be added keyed to the same Display name.

''' Script '''